src/test/resources/org/shirolang/interpreter/errors/assign_to_output.sro
node N begin
    output d Double(132.0)
end

n N
n.d(100.0)